Am adaugat functionalitatea  butonului de favorite din navbar